Make layout more fixed on ie.

--- a/app/assets/stylesheets/website/layout.scss
+++ b/app/assets/stylesheets/website/layout.scss
@@ -110,3 +110,12 @@
     padding-top: 6em;
   }
 }
+
+.lte-ie8 {
+  #wrapper {
+    padding-top: 6em;
+    max-width: 100%;
+    min-width: 761px;
+    width: auto;
+  }
+}
